2009-11-12  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/db/db_sanity.php: fix typo error there was one "zero" more in
	query SQL.
	Fixes: 2895298

2009-11-12  Sancho lerena <slerena@artica.es>

	* include/help/en/help_web_checks.php: Added missing help.

	* include/help/en/help_alert_macros.php: Added missing macros.

2009-11-11  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_reporting.php: fix the debug trace I forget in source
	code.

2009-11-11  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php: fix the web module, change the
	field to save the request retry.
	* godmode/agentes/configurar_agente.php: change the query for tactical view
	the counts of modules before count the disabled modules.

2009-11-10  Sancho Lerena <slerena@gmail.com>

	* pandora_console.spec: Fixed small problem with .spec

	* DEBIAN/control: Edited package description.

	* DEBIAN/make_deb_package.sh: Several changes, deletion and copy
	of files and .svn are not made with cp and xargs | rm: Faster.
	
2009-11-07  Sancho Lerena <slerena@gmail.com>

	* include/config_process.php: COme back to non-persistent pconnect 
	who seems to raise some "MySQL has gone away" in PHP 5.3.x

	* extensions/update_manager/sql/update_manager.sql: Updated update
	manager URL to point 3.0 version.

2009-11-07  Raul Mateos  <raulofpandora@gmail.com>

	* operation/servers/view_server_detail.php: Change title to show the
	father section and some added texts.

	* include/help/en/help_*.php: Several language fixes.

2009-11-06  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/tactical.php, general/logon_ok.php: Use the same
	order for summary, use the same colors (some from tango palette) in both
	files.

	* images/status_sets/default/server_ok.png: Use the same colour as the
	other OK status images (from tango palette).

	* DEBIAN/make_deb_package.sh: Improved english texts.

2009-11-06 Miguel de Dios <miguel.dedios@artica.es>
