@@ -665,6 +665,7 @@ function agent_changed () {
 		$('#id_module').empty ();
 		var inputs = [];
 		inputs.push ("id_agent=" + id_agent);
+		inputs.push ('filter=delete_pending = 0');
 		inputs.push ("get_agent_modules_json=1");
 		inputs.push ("page=operation/agentes/ver_agente");
 		jQuery.ajax ({
@@ -721,6 +722,7 @@ $(document).ready (function () {
 					$('#id_module').empty ();
 					var inputs = [];
 					inputs.push ("agent_name=" + agent_name);
+					inputs.push ('filter=delete_pending = 0');
 					inputs.push ("get_agent_modules_json=1");
 					inputs.push ("page=operation/agentes/ver_agente");
 					jQuery.ajax ({
